--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="./jquery.min.js"></script>
         <script src="./jquery-ui.js"></script>
         <script src="./script.js"></script>
+        <script src="./jquery.ui.touch-punch.min.js"></script>
         <link rel="stylesheet" href="./main.css">
         <title></title>
     </head>
